test_regress/t/t_constraint_unsup.out
%Error-UNSUPPORTED: t/t_constraint_unsup.v:9:27: Unsupported expression inside constraint
    9 |   constraint cons { m_one ** 2 > 0; }
      |                           ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
